@@ -1,3 +1,6 @@
+2016-02-24
+PC always does random movement.
+
 2016-02-23
 Monsters that try a direct path to the PC work.
 
